resources/css/style.css
body {
  font-family: "Helvetica";
}

h1, h2, h3 {
  font-weight: bold;
}

.colorful h1 {
  font-size: 70px;
}

.skeleton h2 {
  font-size: 32px;
}

.colorful, .skeleton {
  text-align: center;
}

.colorful {
  background-image: url(../../resources/images/the-flatiron-building.png);
  color: white;
}

.colorful h2 {
  font-size: 23px;
}

.navi {
  font-size: 18px;
  color: white;
}

.footer {
  background-color: dimgray;
  font-size: 11px;
  color: white;
}

.skeleton p {
  font-size: 14px;
}

.skeleton h3 {
  font-size: 23px;
}

